Vetical aligning the li markers - correcting spacing

--- a/css/reads.css
+++ b/css/reads.css
@@ -23,7 +23,7 @@ li {
   display: flex;
   align-items: center;
   list-style-type: none; /* Remove default marker */
-  margin: 2rem;
+  margin: 1rem;
 }
 
 ol {
@@ -33,7 +33,6 @@ ol {
 li::before {
   counter-increment: list-counter; /* Increment counter for each <li> */
   content: counter(list-counter) "."; /* Display the counter followed by a dot */
-  margin-right: 2rem; /* Space between number and text */
   width: 2rem; /* Set a fixed width to align numbers */
   text-align: right; /* Right-align the numbers within the width */
   display: inline-block; /* Ensure width and alignment work */
@@ -140,6 +139,10 @@ hr {
   #month_image {
     width: 5rem;
   }
+
+  li::before {
+    margin-right: 3rem; /* Space between number and text */
+  }
 }
 
 /********** Large devices only **********/
@@ -155,6 +158,9 @@ hr {
 
   #month_image {
     width: 4rem;
+  }
+  li::before {
+    margin-right: 2rem; /* Space between number and text */
   }
 }
 
@@ -177,6 +183,9 @@ hr {
     margin-left: 5%;
     margin-right: 5%;
   }
+  li::before {
+    margin-right: 2rem; /* Space between number and text */
+  }
 }
 /********** Small devices only **********/
 @media (min-width: 432px) and (max-width: 575px) {
@@ -196,5 +205,8 @@ hr {
   #chart {
     margin-left: 2%;
     margin-right: 2%;
+  }
+  li::before {
+    margin-right: 1rem; /* Space between number and text */
   }
 }
